--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "todo-backend-app",
+  "name": "todo-list-app",
   "version": "1.0.0",
-  "description": "building a todo list app with nodejs",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "logger": "^0.0.1",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.3",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
