--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "logger": "^0.0.1",
     "moment": "^2.29.4",
